Fixed alignment issue. #80
- Resolves #80
- Depends on https://github.com/yorkulibraries/yudl_defaults/commit/30ef17c6cee4295646b9fb45aef9792768321d5b

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,25 @@ details.horizontal-tabs-pane .row:nth-child(2n),
   }
 }
 
+.search-aligned .row.p-2.border-bottom {
+  float: right;
+  width: 70%;
+}
+
+.search-aligned .clearfix.field__item img {
+  float: left;
+}
+
+@media only screen and (max-width: 1420px) {
+  .search-aligned .row.p-2.border-bottom {
+    float: none;
+  }
+  
+  .search-aligned .clearfix.field__item img {
+    float: none;
+  }
+}
+
 /* Collections Stats box */
 #block-yudl-collection-info-block {
   margin-top: 2%;
